# Silver-Invention

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/shaders/: shader.vert
tools/batch/: shader.bat
tools/vk_validation_layer_test/: CMakeLists.txt  list_layers.cpp
